<!-- 
  Copyright(c) 2014 DRAWNZER.ORG PROJECTS -> ANURAG
  
  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at
  
       http://www.apache.org/licenses/LICENSE-2.0
       
  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
                              
                              anurag.dev1512@gmail.com
 
 -->

<resources>

    <string name="app_name">Kollosal Player</string>
   
    <string-array name="lsMenu">
        <item>Preferences</item>
        <item>Check for update</item>
        <item>Help</item>
        <item>Bug report</item>
        <item>About</item>
        <item>Theme</item>
    </string-array>
    <string-array name="theme_colors">
        <item>Grey</item>
        <item>Green</item>
        <item>Red</item>
        <item>Orange</item>
        <item>Blue</item>
        <item>Violet</item>
    </string-array>
    <string name="timeline_video">TIMELINE VIDEO</string>
    <string name="timeline_vid_name">No Video Selected</string>
    <string name="equilizer">Equilizer</string>
    <string name="more_options">More Options</string>
    <string name="search">Search</string>
    <string name="sync">Sync</string>
    <string name="settings">Settings</string>
    <string name="local_videos">LOCAL VIDEOS</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
    <string name="reload_thumb">Reload Thumbnail</string>
    <string name="play_all">Play all</string>
    <string name="more">More</string>
    <string name="less">Less</string>
    <string name="rename">Rename</string>
    <string name="st">00:00</string>
    <string name="enter_url">Enter video URL</string> 
    <string name="history">HISTORY</string>
    <string name="urleg">eg - http://www.video.com/sample.mkv</string>
    
    
        <string name="vitamio_library_app_name">VitamioLibrary</string>
    <string name="vitamio_init_decoders">Initializing decoders for KOLLOSAL PLAYER....</string>
    <string name="permission_group_tools_label">Vitamio tools</string>
    <string name="permission_group_tools_description">Access Vitamio package and resources.</string>
    <string name="permission_receive_messages_label">Receive Vitamio messages</string>
    <string name="permission_receive_messages_description">Receive all broadcasts from Vitamio service.</string>
    <string name="permission_write_providers_label">Write Vitamio providers</string>
    <string name="permission_write_providers_description">Delete, update or create new items in Vitamio providers.
    </string>
    <string name="failedToInitLibs">Sorry failed to initialize the decoders....</string>
    
    <string name="VideoView_error_title">Cannot play video</string>
    <string name="VideoView_error_text_invalid_progressive_playback">Sorry, this video is not valid for streaming to
        this device.
    </string>
    <string name="VideoView_error_text_unknown">Sorry, this video cannot be played.</string>
    <string name="VideoView_error_button">OK</string>
    <string name="mediacontroller_play_pause">Play/Pause</string>

    <string-array name="resize_video">
        <item>ORIGIN</item>
        <item>SCALE</item>
        <item>STRECH</item>
        <item>ZOOM</item>
    </string-array>
    
</resources>
