<!-- 
  Copyright(c) 2014 DRAWNZER.ORG PROJECTS -> ANURAG
  
  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at
  
       http://www.apache.org/licenses/LICENSE-2.0
       
  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
                              
                              anurag.dev1512@gmail.com
 
 -->
 
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/semi_white15" >
    
    <EditText 
        android:paddingTop="10dp"
        android:textColor="@android:color/white"
        android:id="@+id/get_url"
        android:inputType="textUri"
        android:textColorHint="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_url"/>

    <TextView
        style="@style/MediaController_Text"
        android:layout_gravity="center_horizontal" 
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/urleg"/>
    
    <LinearLayout 
        android:layout_marginTop="10dp"
        android:background="@color/semi_white15"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="3dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="30dp">
        <TextView 
            style="@style/MediaController_Text"
            android:text="@string/history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    
</LinearLayout>
